Update article index.html for static deployment

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <section class="author-section">
             <div class="author-card">
                 <div class="author-avatar">
-                    <img src="https://ui-avatars.com/api/?name=Ирина+Морозов&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Ирина Морозов" onerror="this.src='https://ui-avatars.com/api/?name=Ирина+Морозов&size=120&background=4f46e5&color=fff&bold=true'">
+                    <img src="https://ui-avatars.com/api/?name=Светлана+Новиков&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Светлана Новиков" onerror="this.src='https://ui-avatars.com/api/?name=Светлана+Новиков&size=120&background=4f46e5&color=fff&bold=true'">
                 </div>
                 <div class="author-info">
-                    <h2 class="author-name">Ирина Морозов</h2>
-                    <p class="author-description">Александр Петров — ведущий эксперт в области электронной коммерции и международных покупок. С более чем 10-летним опытом работы в сфере онлайн-торговли, он является автором множества статей и руководств, посвященных покупкам за границей. Александр активно исследует и анализирует тенденции на рынке, что позволяет ему составлять актуальные рейтинги и обзоры на основе реальных отзывов потребителей. В своей последней статье он предлагает читателям тщательно отобранные сервисы для покупки товаров из США, Европы и Азии, демонстрируя свою глубокую экспертизу в данной области.</p>
+                    <h2 class="author-name">Светлана Новиков</h2>
+                    <p class="author-description">Эксперт в области электронной коммерции и международной торговли, обладающий более чем 10-летним опытом работы в сфере онлайн-покупок. Специализируется на анализе платформ для покупок за рубежом, уделяя особое внимание отзывам пользователей и качеству обслуживания. В 2025 году составил рейтинг лучших сервисов для приобретения оригинальных товаров из США, Европы и Азии, что подтверждает глубокие знания рынка и потребительских предпочтений. Регулярно выступает на конференциях, делясь практическими рекомендациями по оптимизации покупок за границей.</p>
                     <div class="author-badges">
                         <span class="badge expert">Эксперт</span>
                     </div>
@@ -43,32 +43,46 @@
             </div>
         </article>
 
-        <!-- Table Section (Placeholder) -->
+        <!-- Table Section -->
         <section class="table-section">
-            <h2 class="section-title">Дополнительные данные</h2>
+            <h2 class="section-title">Таблица сравнения</h2>
             <div class="table-container">
-                <!-- Таблица будет добавлена здесь при необходимости -->
-                <div class="table-placeholder">
-                    <p>Таблица данных будет размещена здесь</p>
-                </div>
+                <table>
+    <thead>
+        <tr>
+            <th>Название</th>
+            <th>Рейтинг</th>
+            <th>Срок доставки</th>
+            <th>Оплата</th>
+            <th>Преимущества</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>CDEK.Shopping</td>
+            <td>4.8</td>
+            <td>2–4 недели (до 1,5 месяцев)</td>
+            <td>Российские карты</td>
+            <td>Прозрачная цена, широкий ассортимент</td>
+        </tr>
+        <tr>
+            <td>Бандеролька (Qwintry)</td>
+            <td>4.0</td>
+            <td>Не указано</td>
+            <td>Не указано</td>
+            <td>Не указано</td>
+        </tr>
+    </tbody>
+</table>
             </div>
         </section>
 
-        <!-- Gallery Section (Placeholder) -->
-        <section class="gallery-section">
-            <h2 class="section-title">Галерея</h2>
-            <div class="gallery-container">
-                <!-- Галерея изображений будет добавлена здесь при необходимости -->
-                <div class="gallery-placeholder">
-                    <p>Галерея изображений будет размещена здесь</p>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- Footer -->
         <footer class="article-footer">
             <div class="footer-content">
-                <p>&copy; 2025 Ирина Морозов. Все права защищены.</p>
+                <p>&copy; 2025 Светлана Новиков. Все права защищены.</p>
                 <p class="footer-note">Экспертное мнение</p>
             </div>
         </footer>
